maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: not found: type int
	var i:int = 0;
              ^Escaper:31: error: not found: value estfacemur
		if (estfacemur) {
                    ^